# rpm2json

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/rpm2json/: __init__.py  main.py  skeleton.py
tests/: conftest.py  test_main.py  test_skeleton.py
tests/expect/: rpmlist.json
tests/expect/info/: 100000.json  100001.json  100002.json
tests/repo/SRPMS/: virtualbox-repo-32-10.nst32.src.rpm
tests/repo/noarch/: RandomUUID-1.0.0-5.nst32.noarch.rpm  RandomUUID-1.0.0-6.nst32.noarch.rpm  virtualbox-repo-32-10.nst32.noarch.rpm
