[metadata]
name = rpm2json
version = 0.2.0
description = Convert RPM package data to JSON
long_description = file: README.md
long_description_content_type = text/markdown
author = Paul Blankenbaker
author_email = paul.blankenbaker@gmail.com
license = MIT
url = https://github.com/paul-blankenbaker/rpm2json
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # list your dependencies here
    rpmfile
    click

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    rpm2json = rpm2json.cli:main

[coverage:run]
branch = True
source =
    rpm2json

[pyscaffold]
# Optional: remove if you're not using PyScaffold extensions
version = 3.2.1
